--- a/index.html
+++ b/index.html
@@ -28,35 +28,45 @@
   Instagram -->
 
   <div class="card" id="card" style="width: 18rem;">
-    <img src="assets/images/avatar-jessica.jpeg" class="img
-    rounded-circle" alt="profile-img
+    <img src="assets/images/avatar-jessica.jpeg" class="img" alt="profile-img
     ">
     <div class="bio">
       <h4 class="name">Jessica Randall</h4>
     <h6 class="address" style="color: greenyellow;">London, United Kingdom</h6>
     </div>
     
-    <div class="profession">
+    <div class="about-me">
       <p> "Front-end developer and avid reader."</p>
     </div>
 
     
-    <div class="card-body">
+    <!-- <div class="card-body">
       <div class="d-grid gap-2 col-6 mx-auto">
         <button class="btn " type="button">Github</button>
         <button class="btn" type="button">LinkedIn</button>
         <button class="btn " type="button">Github</button>
         <button class="btn" type="button">LinkedIn</button> 
         <button class="btn " type="button">Github</button>
-        <!-- <button class="btn" type="button">LinkedIn</button> -->
+        <button class="btn" type="button">LinkedIn</button>
       </div>
-    </div>
+    </div> -->
+  
+
+
+  <div class="socials">
+    <a href="" target="_blank">Github</a>
+    <a href="" target="_blank">Frontend Mentor</a>
+    <a href="" target="_blank">LinkedIn</a>
+    <a href="" target="_blank">Twitter</a>
+    <a href="" target="_blank">Instagram</a>
+
   </div>
+</div>
 
   
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
